[project]
name = "autodownloadmodels"
description = "This custom node helps to auto download models from huggingface"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub[hf_transfer]", "hf_transfer", "rapidfuzz"]

[project.urls]
Repository = "https://github.com/AIExplorer25/ComfyUI_AutoDownloadModels"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aiexplorer25"
DisplayName = "ComfyUI_AutoDownloadModels"
Icon = ""
